# FinIto

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: KO.csv
notebooks/: Ito_process_distribution_estimation.ipynb  distirbution_minimiztion_problem.ipynb  distribution_estimation_Ito_process.ipynb  eda_btc_usdt.ipynb  fetch_data.ipynb  reconstruction_of_Ito_coefficients.ipynb  simulate_processes.ipynb  stock_data.ipynb
src/finito/: gauss.py  simulator.py  utility.py
